# ShapeSynth

./: README.md  README.txt  config.txt
cmake/: FindAlglib.cmake  FindOpenMesh.cmake
matlab-files/: compute_spread.m  sortClusters.m
src/: CMakeLists.txt  LogBrowser.cpp  LogBrowser.h  LogBrowserDialog.cpp  LogBrowserDialog.h  MatchT.cpp  MatchT.h  Matlab.h  MeshViewerWidget.cpp  MeshViewerWidget.h  MeshViewerWidgetT.cpp  MeshViewerWidgetT.h  QGLViewerWidget.cpp  QGLViewerWidget.h  ShapeListWidget.cpp  ShapeListWidget.h  ShapeListWidgetItem.h  ShapeT.cpp  ShapeT.h  TemplateExplorationView.cpp  TemplateExplorationView.h  TemplateExplorationViewItem.cpp  TemplateExplorationViewItem.h  TemplateExplorationWidget.cpp  TemplateExplorationWidget.h  VERSION  XForm.h  global.h  main.cpp  utils.h
